switch alert background to red and fix contrast

--- a/styles/frappe.css
+++ b/styles/frappe.css
@@ -17,7 +17,11 @@
     --sky: #99d1db;
     --green: #a6d189;
     --rosewater: #f2d5cf;
-  }
+}
+
+.alert-error {
+  color: var(--body-background);
+}
 
 .confirm {
   color: var(--alert-confirm-color);
@@ -142,7 +146,7 @@ label input[type=checkbox] {
     --alert-success-background-color: var(--surface0);
     --alert-success-border-color: var(--overlay1);
     --alert-error-color: var(--red);
-    --alert-error-background-color: var(--mauve);
+    --alert-error-background-color: var(--red);
     --alert-error-border-color: var(--red);
     --alert-info-color: var(--overlay0);
     --alert-info-background-color: var(--surface0);
