--- a/styles/macchiato.css
+++ b/styles/macchiato.css
@@ -19,6 +19,10 @@
     --rosewater: #f4dbd6;
   }
 
+.alert-error {
+  color: var(--body-background);
+}
+
 .confirm {
   color: var(--alert-confirm-color);
 }
@@ -142,7 +146,7 @@ label input[type=checkbox] {
     --alert-success-background-color: var(--surface0);
     --alert-success-border-color: var(--overlay1);
     --alert-error-color: var(--red);
-    --alert-error-background-color: var(--mauve);
+    --alert-error-background-color: var(--red);
     --alert-error-border-color: var(--red);
     --alert-info-color: var(--overlay0);
     --alert-info-background-color: var(--surface0);
